--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "wp-custom-fields"]
-	path = wp-custom-fields
+[submodule "admin/wp-custom-fields"]
+	path = admin/wp-custom-fields
 	url = https://github.com/makeitworkpress/wp-custom-fields
